# qurii-comisiones

./: .gitignore  README.md
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  auth.py  main.py  models.py  rules_loader.py  rules_templates.py  settings.py  storage.py
backend/app/api/: auth_routes.py  calculator_routes.py  rules_routes.py  runs_routes.py
backend/app/calculator/: engine.py  open_calculator.py
backend/app/config/: .gitignore  rules.json
backend/app/parsers/: __init__.py  _utils.py  asesores_fonbienes.py  asesores_serven.py  gerentes_equipos.py  gerentes_productos.py  gerentes_regionales.py
backend/app/reports/: excel.py  pdf.py
backend/tests/: test_engine.py  test_open_calculator.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  utils.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: CalculatorPage.tsx  LoginPage.tsx  PersonDetailPage.tsx  RulesPage.tsx  RunDetailPage.tsx  RunsListPage.tsx  UploadPage.tsx
